fix search widget button alignment

--- a/sass/site/secondary/_widgets.scss
+++ b/sass/site/secondary/_widgets.scss
@@ -28,6 +28,10 @@ h3.widget-title {
 		font-weight: bold;
 		vertical-align: middle;
 	}
+	input[type="search"] {
+		margin-right: 15px;
+		margin-bottom: 15px;
+	}
 
 	form.search-form {
 		display: table;
