--- a/style.css
+++ b/style.css
@@ -6676,6 +6676,10 @@ h3.widget-title {
   font-weight: bold;
   vertical-align: middle;
 }
+.widget_search input[type=search] {
+  margin-right: 15px;
+  margin-bottom: 15px;
+}
 .widget_search form.search-form {
   display: table;
   width: 100%;
